--- a/atividade.html
+++ b/atividade.html
@@ -37,7 +37,7 @@
             <option value="Portugal">Portugal</option>
             <option value="Estados Unidos">Estados Unidos</option>
             <option value="Outro">Outro</option>
-        </select>
+        </select><br><br>
         
         <label for="fotoperfil">Escolha um foto de perfil:</label>
         <input type="file" id="fotoperfil" name="fotoperfil" required>
