--- a/atividade.html
+++ b/atividade.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Formulário</h2>
-    <form action="processamento.php" method="POST">
+    <form action="processamento.php" method="POST" enctype="multipart/form-data">
         <label for="nome">Nome:</label>
         <input type="text" id="nome" name="nome" required><br><br>
 
