--- a/atividade.html
+++ b/atividade.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário de Exemplo</title>
+    <title>Formulário</title>
 </head>
 <body>
     <h2>Formulário</h2>
@@ -40,10 +40,7 @@
         </select><br><br>
         
         <label for="fotoperfil">Escolha um foto de perfil:</label>
-        <input type="file" id="fotoperfil" name="fotoperfil" required>
-        
-        <br><br>
-
+        <input type="file" id="fotoperfil" name="fotoperfil" required><br><br>
 
         <input type="submit" value="Enviar">
     </form>
