--- a/atividade.html
+++ b/atividade.html
@@ -39,8 +39,8 @@
             <option value="Outro">Outro</option>
         </select><br><br>
         
-        <label for="fotoperfil">Escolha um foto de perfil:</label>
-        <input type="file" id="fotoperfil" name="fotoperfil" required><br><br>
+        <label for="fotoperfil">Escolha um foto de perfil:</label><br>
+        <input type="file" id="fotoperfil" name="fotoperfil" accept="image/*" required><br><br>
 
         <input type="submit" value="Enviar">
     </form>
